--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+/* Importing two Google Fonts: Niramit and Quicksand */
 @import url('https://fonts.googleapis.com/css2?family=Niramit:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+/* Defining global variables using CSS custom properties */
 :root {
   --niramit: 'Niramit', sans-serif;
   --quick-sand: 'Quicksand', sans-serif;
@@ -7,34 +9,41 @@
   --purple-clr: #9d32cb;
 }
 
+/* Apply box-sizing, margin, and padding properties to all elements */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+/* Apply smooth scrolling behavior to the HTML element */
 html {
   scroll-behavior: smooth;
+  /* Use Niramit as the default font family */
   font-family: var(--niramit);
 }
 
+/* Set overflow-x to hidden to prevent horizontal scrolling and center the body */
 body {
   overflow-x: hidden;
   width: 100%;
   margin: 0 auto;
 }
 
+/* Remove underlines from links */
 a,
 a:hover,
 a:focus {
   text-decoration: none;
 }
 
+/* Remove bullet points from unordered lists */
 ul,
 li {
   list-style: none;
 }
 
+/* Remove default margins from heading tags */
 h1,
 h2,
 h2 span,
@@ -45,6 +54,7 @@ h6 {
   margin: 0;
 }
 
+/* Style for h1 headings */
 h1 {
   font-weight: 500;
   font-size: 56px;
@@ -52,6 +62,7 @@ h1 {
   line-height: 1.2;
 }
 
+/* Apply Niramit font and default color to text elements */
 a,
 ul,
 li,
@@ -60,17 +71,20 @@ p {
   color: #202020;
 }
 
+/* Set line-height and font-size for paragraphs */
 p {
   line-height: 1.6em;
   font-size: 18px;
 }
 
+/* Style for the main container of the website */
 .container {
   width: 95%;
   margin: auto;
   padding: 20px 30px;
 }
 
+/* Style for the sections of the website */
 .section {
   padding: 3em 0 5em;
   background: #fff;
@@ -78,7 +92,11 @@ p {
   z-index: 1;
 }
 
+
 /* ===== Header - Navbar ====== */
+/* This CSS defines the style for the navbar. */
+
+/* Set the navbar to a flex container and align items vertically and horizontally. */
 .navbar {
   display: flex;
   align-items: center;
@@ -92,6 +110,7 @@ p {
   z-index: 1000;
 }
 
+/* Define the style for the logo. */
 .logo {
   width: 12%;
 }
@@ -101,6 +120,7 @@ p {
   filter: brightness(0) invert(1);
 }
 
+/* Define the style for the menu items in the navbar. */
 .navbar .nav-menu {
   display: flex;
   align-items: center;
@@ -123,6 +143,7 @@ p {
   margin: 0 20px 0 0;
 }
 
+/* Define the style for the links in the menu items. */
 .navbar ul li a {
   color: #fff;
   font-weight: 600;
@@ -136,6 +157,7 @@ p {
   transition: 0.5s;
 }
 
+/* Define the style for the hover effect on the links. */
 .navbar ul li a::after,
 .popup-mobilemenu .content .mainmenu-nav .navbar-list1 li a::after {
   content: "";
@@ -158,6 +180,7 @@ p {
   color: #fff;
 }
 
+/* Define the style for the navbar when it is scrolled. */
 .navbar.scroll-on{
   position: fixed;
   top: 0;
@@ -165,7 +188,6 @@ p {
   width: 100%;
   box-shadow: 0 0.125rem 1.75rem 0 rgb(0, 0, 0, 0.3);
   transition: all 0.15s ease-in-out 0s;
-  /* padding: 7px 30px; */
   background-color: #fff;
   backdrop-filter: blur(10px);
   z-index: 1000;
@@ -180,6 +202,7 @@ p {
   color: var(--pink-clr);
 }
 
+/* Define the animation for the navbar when it is scrolled. */
 @keyframes headerSlideDown {
   0% {
     margin-top: -100px;
@@ -196,6 +219,9 @@ p {
     opacity: 1;
   }
 }
+
+/* Define the style for
+
 
 
 .navbar.scroll-on {
